Inserted a scrollbar inside each column, changed colors with some CYF palette and fixed the position of the process-steps titles

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,14 @@
+html {
+  overflow: hidden;
+}
+
 .App {
   text-align: center;
 }
 
 #root {
-  background-color: #6d6d6c;
+  background-color: #ffffff;
+  height: 100vh;
 }
 
 .hidden {
@@ -12,8 +17,15 @@
 
 h3 {
   text-align: center;
+  height: 105px;
+  background-color: #29baff;
+  border-radius: 5px;
+  border: groove;
 }
 
+h1 {
+  height: 10px;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -41,20 +53,19 @@ h3 {
 }
 
 .column-container {
-  display: flex;
   margin: 0 10px;
-  overflow-x: scroll;
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: 17vh 70vh;
+  grid-gap: 10px;
 }
 
 .column {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: fit-content;
-  width: 12.5%;
-  margin: 10px 5px;
+  height: vh;
   background-color: #cecece;
   border-radius: 5px;
+  overflow-y: auto;
+  border: groove;
 }
 
 .card {
